<resources>
    <string name="app_name">FigmaDemo</string>
    <string name="no_sleep">NoSleep</string>
    <string name="want_to_join_us">Want to Join Us?</string>
    <string name="_2165_person_meditating_right_now">2165 person meditating right now!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_welcome">Hi, Welcome</string>
    <string name="can_find_some_peace">can find some peace</string>
    <string name="get_started_with_app_where_you">Get started with app where you</string>
    <string name="to_no_sleep">To NoSleep</string>
    <string name="improve_text">Improve Performance\n without cup of coffee</string>
    <string name="recent">Recent</string>
    <string name="timed_meditation">Timed meditation</string>
    <string name="self_practice_in_silence">Self-practice in silence</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="complete_the_courses_you_started">Complete the courses you started</string>
    <string name="midnight_meditation">Midnight Meditation</string>
    <string name="evening_meditation">Evening Meditation</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="profile">profile</string>
    <string name="music">music</string>
    <string name="sleep">Sleep</string>
</resources>