<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".FRStarted">

        <TextView
            android:id="@+id/tvNoSleepFr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/syne"
            android:gravity="center"
            android:text="@string/no_sleep"
            android:textColor="@color/grey"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGroup3Fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:src="@drawable/ic_group_3" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/syne"
            android:gravity="center"
            android:text="@string/hi_welcome"
            android:textColor="@color/yellow"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWelcomeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne"
            android:gravity="center"
            android:letterSpacing="0.14"
            android:text="@string/to_nosleep"
            android:textColor="@color/yellow"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/syne"
            android:gravity="center"
            android:text="@string/get_started_with_app_where_you"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCanFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syne"
            android:gravity="center"
            android:text="@string/can_find_some_peace"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivStartedCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_group_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivStartedBg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35dp"
                android:elevation="2dp"
                android:src="@drawable/bg_started"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivStartedCircle" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBlurPolygon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="245dp"
                android:elevation="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/blur_polygon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivStartedCircle" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGetStarted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="75dp"
                android:elevation="2dp"
                android:src="@drawable/ic_group_7"
                app:layout_constraintBottom_toBottomOf="@+id/ivStartedCircle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>